--- a/1.html
+++ b/1.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="description" content="비전공자의 코딩공부 순서">
+    <meta name="keywords" content="비전공자 개발, 코딩공부 순서, 비전공자의 코딩공부">
+    <meta name="author" content="개발슝이">
+
+    <title>study</title>
   </head>
   <body>
 <h1>비전공자의 코딩공부</h1>
@@ -15,6 +19,36 @@
 <li><a href="5.html">etc.</a></li>
 <li><a href="6.html">Tip</a></li>
 </ul>
+
+<h2>코딩공부 순서</h2>
+
+<ol>
+  <li>웹프론트엔드를 공부하세요.</li>
+  <li>백엔드를 공부하세요.</li>
+  <li>프로젝트를 진행하세요.</li>
+  <li>웹 외의 관심 있는 개발을 찾아 공부하세요.</li>
+</ol>
+
+<p>
+프로그래밍 언어 입문은 웹개발로 추천 합니다.
+웹으로 추천하는 이유는 C, C++ 같은 특정 언어로 시작하면 난이도가 어렵기 때문에 쉽게 흥미를 잃고 포기 하기 쉽습니다.
+그렇기 때문에 비전공자인 사람들에게도 익숙한 웹으로 개발을 시작해보세요.<br>
+웹 개발은 크게 프론트엔드와 백엔드로 나눌 수 있습니다.
+웹 개발에서도 프론트엔드는 사전지식이 상대적으로 낮고 결과가 바로 나오기 때문에 먼저 배울 것을 추천합니다.
+그 후에는 백엔드를 공부하세요.
+만들고 싶은 서비스가 복잡해질수록 프론트엔드만으로는 부족합니다. 백엔드를 배우면 복잡한 서비스도 한 번에 관리 할 수 있습니다.<br>
+백엔드의 장점은 웹과 앱의 나눠어지지 않는다는 점입니다. 하나의 서버를 통해 웹과 앱을 동시에 관리 할 수 있습니다.<br>
+프론트엔드와 백엔드에서 쓰이는 언어를 다 배웠다면 나만의 서비스를 만들어보는 프로젝트를 진행하세요.
+개념만 알고 끝내는 것과 직접 프로젝트를 진행하면서 그 개념을 사용하는 법을 익히는것은 코딩실력 성장에 있어서 분명 차이점이 있습니다.<br>
+이제 어느정도 웹사이트를 만들고 관리 할 수 있으면 웹 외의 관심 있는 분야를 공부해보세요. 개발은 웹 외에도 앱개발, 게임개발, AI개발 등 여러 분야가 있습니다.<br>
+</p>
+
+<h2>코딩공부 인강사이트 추천</h2>
+<ul>
+  <li><a href="" target="_blank" title="생활코딩 사이트">생활코딩</a><li>
+  <li><a href="" target="_blank" title="인프런 사이트">인프런</a><li>
+  <li><a href="" target="_blank" title="유데미 사이트">유데미</a><li>
+  </ul>
 
   </body>
 </html>
