--- a/4.html
+++ b/4.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="description" content="비전공자의 코딩공부 순서">
+    <meta name="keywords" content="비전공자 개발, 코딩공부 순서, 비전공자의 코딩공부">
+    <meta name="author" content="개발슝이">
+
+    <title>3. Project</title>
   </head>
   <body>
 <h1>비전공자의 코딩공부</h1>
@@ -15,6 +19,8 @@
 <li><a href="5.html">etc.</a></li>
 <li><a href="6.html">Tip</a></li>
 </ul>
+
+<img src="img\project.jpg" width="75%">
 
   </body>
 </html>
