--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="비전공자의 코딩공부 순서">
+    <meta name="keywords" content="비전공자 개발, 코딩공부 순서, 비전공자의 코딩공부">
+    <meta name="author" content="개발슝이">
+
     <title>Coding</title>
   </head>
   <body>
@@ -18,4 +22,19 @@
 
 <img src="img\Coding.jpg" width="75%">
   </body>
+
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/5fb3be9a3e20f61525e43a60/default';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
+
 </html>
