--- a/2.html
+++ b/2.html
@@ -2,19 +2,51 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="description" content="비전공자의 코딩공부 순서">
+    <meta name="keywords" content="비전공자 개발, 코딩공부 순서, 비전공자의 코딩공부">
+    <meta name="author" content="개발슝이">
+
+    <title>1. Wed Client</title>
   </head>
   <body>
 <h1>비전공자의 코딩공부</h1>
 
 <ul>
-<li><<a href="1.html">study</a></li>
-<li><<a href="2.html">1. Wed Client</a></li>
-<li><<a href="3.html">2. server</a></li>
-<li><<a href="4.html">3. Project</a></li>
-<li><<a href="5.html">etc.</a></li>
-<li><<a href="6.html">Tip</a></li>
+<li><a href="1.html">study</a></li>
+<li><a href="2.html">1. Wed Client</a></li>
+<li><a href="3.html">2. server</a></li>
+<li><a href="4.html">3. Project</a></li>
+<li><a href="5.html">etc.</a></li>
+<li><a href="6.html">Tip</a></li>
 </ul>
+
+<h2>Wed Client 공부순서</h2>
+<img src="img\html_css_js book.jpg" width="50%">
+<ol>
+<li>HTML</li>
+<li>CSS</li>
+<li>JavaScript</li>
+</ol>
+
+<p>
+고객이라는 뜻을 가진 클라이언트란 개발에서는 웹의 보이는 부분을 말합니다.
+즉 웹사이트를 이용하는 사용자들의 눈에 보이는 모든 부분을 말합니다.<br>
+HTML은 웹의 뼈대를 작성해주는 역할을 합니다. 밑그림을 그려주는 연필 같습니다.
+HTML을 배워서 웹사이트의 필요한 것들을 만들어 주세요.<br>
+CSS는 웹을 꾸며주는 역할을 합니다. 마치 그림에 색을 칠해주는 물감 같습니다.
+CSS를 배워서 웹사이트를 예쁘게 만들어 주세요.<br>
+JavaScript는 웹을 사용자와 상호작용하게 해주는 역할을 합니다.
+마치 다 그려 놓은 그림들을 움직이게 만드는 플립북 같습니다.<br>
+위의 3가지 언어는 유기적으로 연결되어 있고 배우기도 쉽습니다.
+특히 HTML과 CSS는 마크업랭기지라고 불리며 개발언어 취급도 받지 못 할 정도로 난이도가 쉽습니다.
+HTML과 CSS를 배워서 웹페이지의 화면을 그려봅시다. JavaScript는 사실 배울 양이 많은 언어입니다.
+처음부터 끝까지 배우는 것이 아니라 웹의 요소 선택과 제어를 할 수 있는 정도로만 배워서 만들어 놓은 페이지에 적용해 봅시다.<br>
+</p>
+
+<p>
+위의 3가지 언어는 생활코딩 인강을 추천합니다.<br>
+<iframe width="766" height="431" src="https://www.youtube.com/embed/tZooW6PritE?list=PLuHgQVnccGMDZP7FJ_ZsUrdCGH68ppvPb" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
 
   </body>
 </html>
