--- a/5.html
+++ b/5.html
@@ -2,19 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="description" content="비전공자의 코딩공부 순서">
+    <meta name="keywords" content="비전공자 개발, 코딩공부 순서, 비전공자의 코딩공부">
+    <meta name="author" content="개발슝이">
+
+    <title>etc.</title>
   </head>
   <body>
 <h1>비전공자의 코딩공부</h1>
 
 <ul>
-<li><<a href="1.html">study</a></li>
-<li><<a href="2.html">1. Wed Client</a></li>
-<li><<a href="3.html">2. server</a></li>
-<li><<a href="4.html">3. Project</a></li>
-<li><<a href="5.html">etc.</a></li>
-<li><<a href="6.html">Tip</a></li>
+<li><a href="1.html">study</a></li>
+<li><a href="2.html">1. Wed Client</a></li>
+<li><a href="3.html">2. server</a></li>
+<li><a href="4.html">3. Project</a></li>
+<li><a href="5.html">etc.</a></li>
+<li><a href="6.html">Tip</a></li>
 </ul>
 
+
+
+<img src="img\app.jpg" width="75%">
   </body>
 </html>
