--- a/6.html
+++ b/6.html
@@ -2,19 +2,61 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="description" content="비전공자의 코딩공부 순서">
+    <meta name="keywords" content="비전공자 개발, 코딩공부 순서, 비전공자의 코딩공부">
+    <meta name="author" content="개발슝이">
+
+    <title>Tip</title>
   </head>
   <body>
 <h1>비전공자의 코딩공부</h1>
 
 <ul>
-<li><<a href="1.html">study</a></li>
-<li><<a href="2.html">1. Wed Client</a></li>
-<li><<a href="3.html">2. server</a></li>
-<li><<a href="4.html">3. Project</a></li>
-<li><<a href="5.html">etc.</a></li>
-<li><<a href="6.html">Tip</a></li>
+<li><a href="1.html">study</a></li>
+<li><a href="2.html">1. Wed Client</a></li>
+<li><a href="3.html">2. server</a></li>
+<li><a href="4.html">3. Project</a></li>
+<li><a href="5.html">etc.</a></li>
+<li><a href="6.html">Tip</a></li>
 </ul>
+
+<h2>개발 실력 성장을 위한 Tip</h2>
+<P>
+개발 언어를 공부하고 사용하는 것 외에 개발 실력 성장에 도움을 준 나만의 팁들을 소개합니다.
+</p>
+
+<ol>
+  <li>영타 타이핑 연습</li>
+  <li>매일 영어단어 외우기</li>
+  <li></li>
+  <li></li>
+</ol>
+
+<p>
+  제가 추천 해드린 팁 외의 여러분들의 팁을 공유해주세요.
+</p>
+<div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://codingstudy-2.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+
 
   </body>
 </html>
