--- a/2.html
+++ b/2.html
@@ -9,7 +9,8 @@
     <title>1. Wed Client</title>
   </head>
   <body>
-<h1>비전공자의 코딩공부</h1>
+    <h1><a href="index.html">비전공자의 코딩공부</a></h1>
+
 
 <ul>
 <li><a href="1.html">study</a></li>
