--- a/1.html
+++ b/1.html
@@ -9,7 +9,7 @@
     <title>study</title>
   </head>
   <body>
-<h1>비전공자의 코딩공부</h1>
+    <h1><a href="index.html">비전공자의 코딩공부</a></h1>
 
 <ul>
 <li><a href="1.html">study</a></li>
@@ -45,9 +45,9 @@
 
 <h2>코딩공부 인강사이트 추천</h2>
 <ul>
-  <li><a href="" target="_blank" title="생활코딩 사이트">생활코딩</a><li>
-  <li><a href="" target="_blank" title="인프런 사이트">인프런</a><li>
-  <li><a href="" target="_blank" title="유데미 사이트">유데미</a><li>
+  <li><a href="" target="_blank" title="생활코딩 사이트">생활코딩</a></li>
+  <li><a href="" target="_blank" title="인프런 사이트">인프런</a></li>
+  <li><a href="" target="_blank" title="유데미 사이트">유데미</a></li>
   </ul>
 
   </body>
