--- a/1.html
+++ b/1.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4K87PB858G"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4K87PB858G');
+</script>
     <meta charset="utf-8">
     <meta name="description" content="비전공자의 코딩공부 순서">
     <meta name="keywords" content="비전공자 개발, 코딩공부 순서, 비전공자의 코딩공부">
@@ -45,9 +54,10 @@
 
 <h2>코딩공부 인강사이트 추천</h2>
 <ul>
-  <li><a href="" target="_blank" title="생활코딩 사이트">생활코딩</a></li>
-  <li><a href="" target="_blank" title="인프런 사이트">인프런</a></li>
-  <li><a href="" target="_blank" title="유데미 사이트">유데미</a></li>
+  <li><a href="https://www.opentutorials.org/" target="_blank" title="생활코딩 사이트">생활코딩</a></li>
+  <li><a href="https://www.inflearn.com/" target="_blank" title="인프런 사이트">인프런</a></li>
+  <li><a href="https://www.udemy.com/" target="_blank" title="유데미 사이트">유데미</a></li>
+  <li><a href="https://nomadcoders.co/" target="_blank" title="노마드코더 사이트">노마드 코더</a></li>
   </ul>
 
   </body>
