--- a/2.html
+++ b/2.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4K87PB858G"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4K87PB858G');
+</script>
     <meta charset="utf-8">
     <meta name="description" content="비전공자의 코딩공부 순서">
     <meta name="keywords" content="비전공자 개발, 코딩공부 순서, 비전공자의 코딩공부">
@@ -22,7 +31,6 @@
 </ul>
 
 <h2>Wed Client 공부순서</h2>
-<img src="img\html_css_js book.jpg" width="50%">
 <ol>
 <li>HTML</li>
 <li>CSS</li>
