--- a/5.html
+++ b/5.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4K87PB858G"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4K87PB858G');
+</script>
     <meta charset="utf-8">
     <meta name="description" content="비전공자의 코딩공부 순서">
     <meta name="keywords" content="비전공자 개발, 코딩공부 순서, 비전공자의 코딩공부">
@@ -21,8 +30,11 @@
 <li><a href="6.html">Tip</a></li>
 </ul>
 
-
-
-<img src="img\app.jpg" width="75%">
+<h2>etc.</h2>
+<p>
+웹개발에 어느정도 익숙해졌으면 화면과 서버의 개념이 어느정도 자리를 잡았을 것 입니다.
+이제는 웹개발외에 앱개발이나 게임, 인공지능과 같은 관심있는 분야를 찾아서 공부해봅시다.
+다른 개발도 화면과 서버라는 개념을 이해하고 공부한다면 조금 더 쉽게 배울 수 있습니다.<br>
+</p>
   </body>
 </html>
