--- a/6.html
+++ b/6.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4K87PB858G"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4K87PB858G');
+</script>
     <meta charset="utf-8">
     <meta name="description" content="비전공자의 코딩공부 순서">
     <meta name="keywords" content="비전공자 개발, 코딩공부 순서, 비전공자의 코딩공부">
@@ -27,9 +36,9 @@
 </p>
 
 <ol>
-  <li>영타 타이핑 연습</li>
-  <li>매일 영어단어 외우기</li>
-  <li></li>
+  <li>영타 타이핑 연습 : 코드를 칠 때 빠르고 정확하게 쳐야한다.</li>
+  <li>매일 영어단어 외우기 : 질 좋은 문서와 자료들은 영어가 많다.</li>
+  <li>Adobe XD 사용법 익히기 : 기획 할 때 프로토타입을 할 수 있어서 좋다.</li>
   <li></li>
 </ol>
 
