--- a/index.html
+++ b/index.html
@@ -2,48 +2,47 @@
 <html>
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4K87PB858G"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4K87PB858G"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-  gtag('config', 'G-4K87PB858G');
-</script>
-    <meta charset="utf-8">
+      gtag('config', 'G-4K87PB858G');
+    </script>
+
     <meta name="description" content="비전공자의 코딩공부 순서">
     <meta name="keywords" content="비전공자 개발, 코딩공부 순서, 비전공자의 코딩공부">
     <meta name="author" content="개발슝이">
+    <meta charset="utf-8">
+    <title>비전공자 코딩공부</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
 
-    <title>Coding</title>
+    </style>
   </head>
   <body>
-<h1><a href="index.html">비전공자의 코딩공부</a></h1>
+        <h1><a class="a" href="index.html">비전공자의 코딩공부</a></h1>
+      <div class="columns">
+        <ul class="list">
+          <li><a class="a" href="1.html">study order</a></li>
+          <li><a class="a" href="2.html">1. Web Client</a></li>
+          <li><a class="a" href="3.html">2. Server</a></li>
+          <li><a class="a" href="4.html">3. Project</a></li>
+          <li><a class="a" href="5.html">etc.</a></li>
+          <li><a class="a" href="6.html">Tip.</a></li>
+        </ul>
+        <div class="article">
+          <p>
+          안녕하세요.<br>
+          이 웹 사이트 비전공자인 제가 코딩에 입문하기 위해 어떤 순서로 공부했는지 공유하기 위해 만들어졌습니다.<br>
+          공부 순서외에도 저만의 코딩 실력 향상을 위한 팁을 공유하고 있습니다.<br>
+          제가 공유하는 것 외에도 여러분의 팁도 서로 공유하는 공간 만들고 싶어요!<br>
+          <br><br><br>
+          <img src="img\keyboard.jpg" width="50%" >
+        </p>
+        </div>
+      </div>
 
-<ul>
-<li><a href="1.html">study</a></li>
-<li><a href="2.html">1. Wed Client</a></li>
-<li><a href="3.html">2. server</a></li>
-<li><a href="4.html">3. Project</a></li>
-<li><a href="5.html">etc.</a></li>
-<li><a href="6.html">Tip</a></li>
-</ul>
-
-<img src="img\Coding.jpg" width="75%">
   </body>
-
-  <!--Start of Tawk.to Script-->
-  <script type="text/javascript">
-  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-  (function(){
-  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-  s1.async=true;
-  s1.src='https://embed.tawk.to/5fb3be9a3e20f61525e43a60/default';
-  s1.charset='UTF-8';
-  s1.setAttribute('crossorigin','*');
-  s0.parentNode.insertBefore(s1,s0);
-  })();
-  </script>
-  <!--End of Tawk.to Script-->
-
 </html>
