--- a/1.html
+++ b/1.html
@@ -2,63 +2,63 @@
 <html>
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4K87PB858G"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4K87PB858G"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-  gtag('config', 'G-4K87PB858G');
-</script>
-    <meta charset="utf-8">
+      gtag('config', 'G-4K87PB858G');
+    </script>
+
     <meta name="description" content="비전공자의 코딩공부 순서">
     <meta name="keywords" content="비전공자 개발, 코딩공부 순서, 비전공자의 코딩공부">
     <meta name="author" content="개발슝이">
-
-    <title>study</title>
+    <meta charset="utf-8">
+    <title>study order</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1><a href="index.html">비전공자의 코딩공부</a></h1>
-
-<ul>
-<li><a href="1.html">study</a></li>
-<li><a href="2.html">1. Wed Client</a></li>
-<li><a href="3.html">2. server</a></li>
-<li><a href="4.html">3. Project</a></li>
-<li><a href="5.html">etc.</a></li>
-<li><a href="6.html">Tip</a></li>
-</ul>
-
-<h2>코딩공부 순서</h2>
-
-<ol>
-  <li>웹프론트엔드를 공부하세요.</li>
-  <li>백엔드를 공부하세요.</li>
-  <li>프로젝트를 진행하세요.</li>
-  <li>웹 외의 관심 있는 개발을 찾아 공부하세요.</li>
-</ol>
-
-<p>
-프로그래밍 언어 입문은 웹개발로 추천 합니다.
-웹으로 추천하는 이유는 C, C++ 같은 특정 언어로 시작하면 난이도가 어렵기 때문에 쉽게 흥미를 잃고 포기 하기 쉽습니다.
-그렇기 때문에 비전공자인 사람들에게도 익숙한 웹으로 개발을 시작해보세요.<br>
-웹 개발은 크게 프론트엔드와 백엔드로 나눌 수 있습니다.
-웹 개발에서도 프론트엔드는 사전지식이 상대적으로 낮고 결과가 바로 나오기 때문에 먼저 배울 것을 추천합니다.
-그 후에는 백엔드를 공부하세요.
-만들고 싶은 서비스가 복잡해질수록 프론트엔드만으로는 부족합니다. 백엔드를 배우면 복잡한 서비스도 한 번에 관리 할 수 있습니다.<br>
-백엔드의 장점은 웹과 앱의 나눠어지지 않는다는 점입니다. 하나의 서버를 통해 웹과 앱을 동시에 관리 할 수 있습니다.<br>
-프론트엔드와 백엔드에서 쓰이는 언어를 다 배웠다면 나만의 서비스를 만들어보는 프로젝트를 진행하세요.
-개념만 알고 끝내는 것과 직접 프로젝트를 진행하면서 그 개념을 사용하는 법을 익히는것은 코딩실력 성장에 있어서 분명 차이점이 있습니다.<br>
-이제 어느정도 웹사이트를 만들고 관리 할 수 있으면 웹 외의 관심 있는 분야를 공부해보세요. 개발은 웹 외에도 앱개발, 게임개발, AI개발 등 여러 분야가 있습니다.<br>
-</p>
-
-<h2>코딩공부 인강사이트 추천</h2>
-<ul>
-  <li><a href="https://www.opentutorials.org/" target="_blank" title="생활코딩 사이트">생활코딩</a></li>
-  <li><a href="https://www.inflearn.com/" target="_blank" title="인프런 사이트">인프런</a></li>
-  <li><a href="https://www.udemy.com/" target="_blank" title="유데미 사이트">유데미</a></li>
-  <li><a href="https://nomadcoders.co/" target="_blank" title="노마드코더 사이트">노마드 코더</a></li>
-  </ul>
-
+        <h1><a class="a" href="index.html">비전공자의 코딩공부</a></h1>
+      <div class="columns">
+        <ul class="list">
+          <li><a id="page" class="a" href="1.html">study order</a></li>
+          <li><a class="a" href="2.html">1. Web Client</a></li>
+          <li><a class="a" href="3.html">2. Server</a></li>
+          <li><a class="a" href="4.html">3. Project</a></li>
+          <li><a class="a" href="5.html">etc.</a></li>
+          <li><a class="a" href="6.html">Tip.</a></li>
+        </ul>
+        <div class="article">
+          <h2> study order </h2>
+            <h3>공부 순서</h3>
+            <ol>
+              <li>웹프론트엔드를 공부하세요.</li>
+              <li>백엔드를 공부하세요.</li>
+              <li>프로젝트를 진행하세요.</li>
+              <li>웹 외의 관심 있는 개발을 찾아 공부하세요.</li>
+            </ol>
+            <br>
+            <h3>코딩 공부</h3>
+                프로그래밍 언어 입문은 웹개발로 추천 합니다.
+                웹으로 추천하는 이유는 C, C++ 같은 특정 언어로 시작하면 난이도가 어렵기 때문에 쉽게 흥미를 잃고 포기 하기 쉽습니다.
+                그렇기 때문에 비전공자인 사람들에게도 익숙한 웹으로 개발을 시작해보세요.<br>
+                웹 개발은 크게 프론트엔드와 백엔드로 나눌 수 있습니다.
+                웹 개발에서도 프론트엔드는 사전지식이 상대적으로 낮고 결과가 바로 나오기 때문에 먼저 배울 것을 추천합니다.
+                그 후에는 백엔드를 공부하세요.
+                만들고 싶은 서비스가 복잡해질수록 프론트엔드만으로는 부족합니다. 백엔드를 배우면 복잡한 서비스도 한 번에 관리 할 수 있습니다.<br>
+                백엔드의 장점은 웹과 앱의 나눠어지지 않는다는 점입니다. 하나의 서버를 통해 웹과 앱을 동시에 관리 할 수 있습니다.<br>
+                프론트엔드와 백엔드에서 쓰이는 언어를 다 배웠다면 나만의 서비스를 만들어보는 프로젝트를 진행하세요.
+                개념만 알고 끝내는 것과 직접 프로젝트를 진행하면서 그 개념을 사용하는 법을 익히는것은 코딩실력 성장에 있어서 분명 차이점이 있습니다.<br>
+                이제 어느정도 웹사이트를 만들고 관리 할 수 있으면 웹 외의 관심 있는 분야를 공부해보세요. 개발은 웹 외에도 앱개발, 게임개발, AI개발 등 여러 분야가 있습니다.<br>
+            <h3>코딩공부 인강사이트 추천</h3>
+              <ul>
+                <li><a class="a" href="https://www.opentutorials.org/" target="_blank" title="생활코딩 사이트">생활코딩</a></li>
+                <li><a class="a" href="https://www.inflearn.com/" target="_blank" title="인프런 사이트">인프런</a></li>
+                <li><a class="a" href="https://www.udemy.com/" target="_blank" title="유데미 사이트">유데미</a></li>
+                <li><a class="a" href="https://nomadcoders.co/" target="_blank" title="노마드코더 사이트">노마드 코더</a></li>
+              </ul>
+        </div>
+      </div>
   </body>
 </html>
