--- a/3.html
+++ b/3.html
@@ -2,54 +2,54 @@
 <html>
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4K87PB858G"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4K87PB858G"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-  gtag('config', 'G-4K87PB858G');
-</script>
-    <meta charset="utf-8">
+      gtag('config', 'G-4K87PB858G');
+    </script>
+
     <meta name="description" content="비전공자의 코딩공부 순서">
     <meta name="keywords" content="비전공자 개발, 코딩공부 순서, 비전공자의 코딩공부">
     <meta name="author" content="개발슝이">
-
-    <title>2. server</title>
+    <meta charset="utf-8">
+    <title>Server</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1><a href="index.html">비전공자의 코딩공부</a></h1>
-
-
-<ul>
-<li><a href="1.html">study</a></li>
-<li><a href="2.html">1. Wed Client</a></li>
-<li><a href="3.html">2. server</a></li>
-<li><a href="4.html">3. Project</a></li>
-<li><a href="5.html">etc.</a></li>
-<li><a href="6.html">Tip</a></li>
-</ul>
-
-<h2>2. server</h2>
-<ol>
-<li>Javascript, Ruby, Python 등 쉬운 백엔드 언어 중 선택</li>
-<li>클론코딩으로 선택한 언어에 맞는 프레임워크 익히기 </li>
-<li>Wed Client 학습하며 만들어 둔 웹에 적용하기 </li>
-</ol>
-
-<p>
-프론트엔드의 개념 완성 후엔 서버를 관리하는 백엔드 공부를 시작합니다.
-고객들에게 서비스를 제공 해준다는 뜻을 가진 서버란 개발에서는 사용자 눈에 보이지 않는 정보를 말합니다.<br>
-백엔드는 원래 공부 할 양이 방대하지만 요즘은 프레임워크의 도움을 받아 비교적 쉽게 만들 수 있습니다.
-Javascript, Ruby, Python 등 쉬운 언어 중 하나를 선택합니다.
-쉽다고 해도 처음부터 공부하는 것은 시간이 오래 걸립니다.
-우선 기본개념인 변수, 조건문, 반복문, 함수 4가지 개념을 먼저 학습합니다.
-그 후 더 필요한 것은 그 부분만 찾아가면서 공부하면 됩니다.<br>
-개념 학습이 끝 난 후에는 프레임워크의 사용법을 익혀봅시다.
-인프런, 노마드코더 같은 학습 사이트에서 클론코딩을 수강하면서 익히면 됩니다.
-각 언어의 프레임워크로는 Javascript spring, Python Django, Ruby Rails등이 있습니다.<br>
-프레임워크를 학습하면서 Wed Client 학습하며 만들어 둔 웹에 적용해봅시다.<br>
-</p>
-
+        <h1><a class="a" href="index.html">비전공자의 코딩공부</a></h1>
+      <div class="columns">
+        <ul class="list">
+          <li><a class="a" href="1.html">study order</a></li>
+          <li><a class="a" href="2.html">1. Web Client</a></li>
+          <li><a id="page" class="a" href="3.html">2. Server</a></li>
+          <li><a class="a" href="4.html">3. Project</a></li>
+          <li><a class="a" href="5.html">etc.</a></li>
+          <li><a class="a" href="6.html">Tip.</a></li>
+        </ul>
+        <div class="article">
+          <h2>Server</h2>
+            <h3>서버 공부 순서</h3>
+              <ol>
+                <li>Javascript, Ruby, Python 등 쉬운 백엔드 언어 중 선택</li>
+                <li>클론코딩으로 선택한 언어에 맞는 프레임워크 익히기 </li>
+                <li>Wed Client 학습하며 만들어 둔 웹에 적용하기 </li>
+              </ol>
+            <h3>서버 공부</h3>
+              프론트엔드의 개념 완성 후엔 서버를 관리하는 백엔드 공부를 시작합니다.
+              고객들에게 서비스를 제공 해준다는 뜻을 가진 서버란 개발에서는 사용자 눈에 보이지 않는 정보를 말합니다.<br>
+              백엔드는 원래 공부 할 양이 방대하지만 요즘은 프레임워크의 도움을 받아 비교적 쉽게 만들 수 있습니다.
+              Javascript, Ruby, Python 등 쉬운 언어 중 하나를 선택합니다.
+              쉽다고 해도 처음부터 공부하는 것은 시간이 오래 걸립니다.
+              우선 기본개념인 변수, 조건문, 반복문, 함수 4가지 개념을 먼저 학습합니다.
+              그 후 더 필요한 것은 그 부분만 찾아가면서 공부하면 됩니다.<br>
+              개념 학습이 끝 난 후에는 프레임워크의 사용법을 익혀봅시다.
+              인프런, 노마드코더 같은 학습 사이트에서 클론코딩을 수강하면서 익히면 됩니다.
+              각 언어의 프레임워크로는 Javascript spring, Python Django, Ruby Rails등이 있습니다.<br>
+              프레임워크를 학습하면서 Wed Client 학습하며 만들어 둔 웹에 적용해봅시다.<br>
+        </div>
+      </div>
   </body>
 </html>
