--- a/4.html
+++ b/4.html
@@ -2,43 +2,44 @@
 <html>
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4K87PB858G"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4K87PB858G"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-  gtag('config', 'G-4K87PB858G');
-</script>
-    <meta charset="utf-8">
+      gtag('config', 'G-4K87PB858G');
+    </script>
+
     <meta name="description" content="비전공자의 코딩공부 순서">
     <meta name="keywords" content="비전공자 개발, 코딩공부 순서, 비전공자의 코딩공부">
     <meta name="author" content="개발슝이">
-
-    <title>3. Project</title>
+    <meta charset="utf-8">
+    <title>Project</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1><a href="index.html">비전공자의 코딩공부</a></h1>
-
-
-<ul>
-<li><a href="1.html">study</a></li>
-<li><a href="2.html">1. Wed Client</a></li>
-<li><a href="3.html">2. server</a></li>
-<li><a href="4.html">3. Project</a></li>
-<li><a href="5.html">etc.</a></li>
-<li><a href="6.html">Tip</a></li>
-</ul>
-
-<h2>3. Project</h2>
-<p>
-웹의 프론트엔드와 백엔드를 어느정도 이해했으면 프로젝트를 하면서 코딩실력을 성장시켜 봅시다.<br>
-내가 만들고 싶은 웹서비스들을 생각해보고 기획해서 프로젝트 형식으로 하나하나 만들어 봅시다.
-개인프로젝트를 진행 하는 것도 좋고 같은
-서비스를 만들고 싶은 사람이나 같은 언어 공부하는 사람들을 구해서 팀프로젝트도 진행해봅시다.
-개발자란 직업은 혼자 만들어 가는 것이 아니기 때문에 다른 사람들과의 의사소통능력도 중요합니다.
-팀프로젝트를 진행하면서 협동과 협력이라는 자질을 배울 수 있습니다.
-</p>
-
+        <h1><a class="a" href="index.html">비전공자의 코딩공부</a></h1>
+      <div class="columns">
+        <ul class="list">
+          <li><a class="a" href="1.html">study order</a></li>
+          <li><a class="a" href="2.html">1. Web Client</a></li>
+          <li><a class="a" href="3.html">2. Server</a></li>
+          <li><a id="page" class="a" href="4.html">3. Project</a></li>
+          <li><a class="a" href="5.html">etc.</a></li>
+          <li><a class="a" href="6.html">Tip.</a></li>
+        </ul>
+        <div class="article">
+          <h2>Project</h2>
+            <p>
+              웹의 프론트엔드와 백엔드를 어느정도 이해했으면 프로젝트를 하면서 코딩실력을 성장시켜 봅시다.<br>
+              내가 만들고 싶은 웹서비스들을 생각해보고 기획해서 프로젝트 형식으로 하나하나 만들어 봅시다.
+              개인프로젝트를 진행 하는 것도 좋고 같은
+              서비스를 만들고 싶은 사람이나 같은 언어 공부하는 사람들을 구해서 팀프로젝트도 진행해봅시다.
+              개발자란 직업은 혼자 만들어 가는 것이 아니기 때문에 다른 사람들과의 의사소통능력도 중요합니다.
+              팀프로젝트를 진행하면서 협동과 협력이라는 자질을 배울 수 있습니다.
+            </p>
+        </div>
+      </div>
   </body>
 </html>
