--- a/6.html
+++ b/6.html
@@ -2,71 +2,69 @@
 <html>
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4K87PB858G"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4K87PB858G"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-  gtag('config', 'G-4K87PB858G');
-</script>
-    <meta charset="utf-8">
+      gtag('config', 'G-4K87PB858G');
+    </script>
+
     <meta name="description" content="비전공자의 코딩공부 순서">
     <meta name="keywords" content="비전공자 개발, 코딩공부 순서, 비전공자의 코딩공부">
     <meta name="author" content="개발슝이">
-
+    <meta charset="utf-8">
     <title>Tip</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1><a href="index.html">비전공자의 코딩공부</a></h1>
+        <h1><a class="a" href="index.html">비전공자의 코딩공부</a></h1>
+      <div class="columns">
+        <ul class="list">
+          <li><a class="a" href="1.html">study order</a></li>
+          <li><a class="a" href="2.html">1. Web Client</a></li>
+          <li><a class="a" href="3.html">2. Server</a></li>
+          <li><a class="a" href="4.html">3. Project</a></li>
+          <li><a class="a" href="5.html">etc.</a></li>
+          <li><a id="page" class="a" href="6.html">Tip.</a></li>
+        </ul>
+        <div class="article">
+          <h2>개발 실력 성장을 위한 Tip</h2>
+          <p>
+            개발 언어를 공부하고 사용하는 것 외에 개발 실력 성장에 도움을 준 나만의 팁들을 소개합니다.<br>
+            <ol>
+              <li>영타 타이핑 연습 : 코드를 칠 때 빠르고 정확하게 쳐야한다.</li>
+              <li>매일 영어단어 외우기 : 질 좋은 문서와 자료들은 영어가 많다.</li>
+              <li>Adobe XD 사용법 익히기 : 기획 할 때 프로토타입을 할 수 있어서 좋다.</li>
+              <li></li>
+            </ol>
+          </p>
 
+          <!-- *여기서부터는 채팅 코드입니다* -->
+          <div id="disqus_thread"></div>
+          <script>
 
-<ul>
-<li><a href="1.html">study</a></li>
-<li><a href="2.html">1. Wed Client</a></li>
-<li><a href="3.html">2. server</a></li>
-<li><a href="4.html">3. Project</a></li>
-<li><a href="5.html">etc.</a></li>
-<li><a href="6.html">Tip</a></li>
-</ul>
+          /**
+          *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+          *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+          /*
+          var disqus_config = function () {
+          this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+          this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+          (function() { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://codingstudy-2.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+          })();
+          </script>
+          <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+          <!-- 여기까지는 채팅 코드입니다 -->
 
-<h2>개발 실력 성장을 위한 Tip</h2>
-<P>
-개발 언어를 공부하고 사용하는 것 외에 개발 실력 성장에 도움을 준 나만의 팁들을 소개합니다.
-</p>
-
-<ol>
-  <li>영타 타이핑 연습 : 코드를 칠 때 빠르고 정확하게 쳐야한다.</li>
-  <li>매일 영어단어 외우기 : 질 좋은 문서와 자료들은 영어가 많다.</li>
-  <li>Adobe XD 사용법 익히기 : 기획 할 때 프로토타입을 할 수 있어서 좋다.</li>
-  <li></li>
-</ol>
-
-<p>
-  제가 추천 해드린 팁 외의 여러분들의 팁을 공유해주세요.
-</p>
-<div id="disqus_thread"></div>
-<script>
-
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-/*
-var disqus_config = function () {
-this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-*/
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://codingstudy-2.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-
-
-
+        </div>
+      </div>
   </body>
 </html>
