--- a/6.html
+++ b/6.html
@@ -19,6 +19,15 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+        <input type="button" value="pink" onclick="
+        document.querySelector('body').style.backgroundColor='LightPink';
+        ">
+        <input type="button" value="gray" onclick="
+        document.querySelector('body').style.backgroundColor='Gainsboro';
+        ">
+        <input type="button" value="white" onclick="
+        document.querySelector('body').style.backgroundColor='white';
+        ">
         <h1><a class="a" href="index.html">비전공자의 코딩공부</a></h1>
       <div class="columns">
         <ul class="list">
@@ -41,7 +50,7 @@
             </ol>
           </p>
 
-          <!-- *여기서부터는 채팅 코드입니다* -->
+          <!-- 여기서부터는 채팅 코드입니다 -->
           <div id="disqus_thread"></div>
           <script>
 
