--- a/index.html
+++ b/index.html
@@ -19,15 +19,18 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-        <input type="button" value="pink" onclick="
-        document.querySelector('body').style.backgroundColor='LightPink';
+        <input type="button" value="blue" onclick="
+          var target_body = document.querySelector('body');
+        if(this.value === 'blue'){
+          target_body.style.backgroundColor='LightSteelBlue';
+          this.value = 'pink';
+        }else{
+          target_body.style.backgroundColor='LightPink';
+          this.value = 'blue';
+        }
         ">
-        <input type="button" value="gray" onclick="
-        document.querySelector('body').style.backgroundColor='Gainsboro';
-        ">
-        <input type="button" value="white" onclick="
-        document.querySelector('body').style.backgroundColor='white';
-        ">
+
+
         <h1><a class="a" href="index.html">비전공자의 코딩공부</a></h1>
       <div class="columns">
         <ul class="list">
