--- a/1.html
+++ b/1.html
@@ -17,17 +17,12 @@
     <meta charset="utf-8">
     <title>study order</title>
     <link rel="stylesheet" href="style.css">
+    <script src="dayNightColor.js"></script>
   </head>
   <body>
-        <input type="button" value="pink" onclick="
-        document.querySelector('body').style.backgroundColor='LightPink';
-        ">
-        <input type="button" value="gray" onclick="
-        document.querySelector('body').style.backgroundColor='Gainsboro';
-        ">
-        <input type="button" value="white" onclick="
-        document.querySelector('body').style.backgroundColor='white';
-        ">
+    <input type="button" value="야" onclick="
+    nightDay(this);
+    ">
         <h1><a class="a" href="index.html">비전공자의 코딩공부</a></h1>
       <div class="columns">
         <ul class="list">
