--- a/1.html
+++ b/1.html
@@ -26,40 +26,44 @@
         <h1><a class="a" href="index.html">비전공자의 코딩공부</a></h1>
       <div class="columns">
         <ul class="list">
-          <li><a id="page" class="a" href="1.html">study order</a></li>
-          <li><a class="a" href="2.html">1. Web Client</a></li>
-          <li><a class="a" href="3.html">2. Server</a></li>
+          <li><a class="a" href="1.html">소개</a></li>
+          <li><a class="a" href="2.html">1. Front-end</a></li>
+          <li><a class="a" href="3.html">2. Back-end</a></li>
           <li><a class="a" href="4.html">3. Project</a></li>
           <li><a class="a" href="5.html">etc.</a></li>
           <li><a class="a" href="6.html">Tip.</a></li>
         </ul>
         <div class="article">
-          <h2> study order </h2>
-            <h3>공부 순서</h3>
+			<h2>코딩 공부 순서</h2>
+처음 막연하게 개발자가 되기로 마음 먹었을 때 무엇부터 시작 해야 할 지 막막했습니다. 
+프로그램을 개발한다는게 어떤 것인지도 잘 모르고, 어떤것들을 공부해야 할지 막막했기 때문입니다.
+그래서 프로그래밍 개발자들이 무엇인지, 어떤 공부를 해야할지 여기저기 찾아보게 됐습니다.<br>
+공통적으로 개발을 처음 시작하는 사람들은 웹개발을 추천했습니다. 
+여러가지 프로그래밍 중 왜 웹이였을까요? 
+보통 프로그래밍 언어를 배운다고 하면 C, C++ 같은 특정 언어부터 배우는걸 추천하기도 합니다.
+지금 사용하는 많은 프로그래밍언어가 C언어로부터 파생되었기 때문입니다. 
+C언어를 먼저 배우고나면 파생된 다른 프로그래밍 언어를 조금 더 쉽게 이해 할 수 있는 것도 맞습니다.
+하지만 특정 언어로 개발을 시작하면 난이도가 어렵기 때문에 저 같은 비전공자들은 쉽게 흥미를 잃고 포기 하기 쉽습니다.
+그렇기 때문에 개발이란 단어가 익숙하지 않은 비전공자들은 그래도 우리 삶에서 익숙한 웹을 개발하는 것으로 입문하길 추천드립니다.<br>
+그렇다면 웹개발을 하기 위해서는 무엇을 공부해야 할까요? 
+웹개발은 크게 프로트엔드와 백엔드 두가지로 나눌 수 있습니다.
+웹개발에서도 프로트엔드는 사전지식이 상대적으로 낮고 결과가 바로 나오기 때문에 먼저 배우면서 흥미를 느껴보길 추천드립니다.
+그 후 조금더 복잡하고 동적인 기능을 추가 할 수 있는 백엔드쪽을 공부하세요. <br>
+웹의 보여지는 부분과 동적으로 작동하는 서비스들을 만들 수 있게 된다면 그때부터는 나만의 서비스를 만들어보는 프로젝트를 진행하세요.
+단순하게 언어를 공부해서 개념을 알고 끝내는 것과 직접 프로젝트를 진행하면서 사용하는 법을 익히는 것의 차이는 생각보다 큽니다.
+프로젝트를 통해 웹개발을 할 수 있게 됐다면, 웹 개발 외에도 여러가지 관심 분야를 찾아 공부하고 개발해보세요.<br>
+			<h3>소개</h3>
             <ol>
-              <li>웹프론트엔드를 공부하세요.</li>
-              <li>백엔드를 공부하세요.</li>
-              <li>프로젝트를 진행하세요.</li>
-              <li>웹 외의 관심 있는 개발을 찾아 공부하세요.</li>
+              <li>웹 프론트엔드 공부</li>
+              <li>백엔드 공부</li>
+              <li>프로젝트</li>
+              <li>그 외에 관심 있는 분야</li>
             </ol>
             <br>
-            <h3>코딩 공부</h3>
-                프로그래밍 언어 입문은 웹개발로 추천 합니다.
-                웹으로 추천하는 이유는 C, C++ 같은 특정 언어로 시작하면 난이도가 어렵기 때문에 쉽게 흥미를 잃고 포기 하기 쉽습니다.
-                그렇기 때문에 비전공자인 사람들에게도 익숙한 웹으로 개발을 시작해보세요.<br>
-                웹 개발은 크게 프론트엔드와 백엔드로 나눌 수 있습니다.
-                웹 개발에서도 프론트엔드는 사전지식이 상대적으로 낮고 결과가 바로 나오기 때문에 먼저 배울 것을 추천합니다.
-                그 후에는 백엔드를 공부하세요.
-                만들고 싶은 서비스가 복잡해질수록 프론트엔드만으로는 부족합니다. 백엔드를 배우면 복잡한 서비스도 한 번에 관리 할 수 있습니다.<br>
-                백엔드의 장점은 웹과 앱의 나눠어지지 않는다는 점입니다. 하나의 서버를 통해 웹과 앱을 동시에 관리 할 수 있습니다.<br>
-                프론트엔드와 백엔드에서 쓰이는 언어를 다 배웠다면 나만의 서비스를 만들어보는 프로젝트를 진행하세요.
-                개념만 알고 끝내는 것과 직접 프로젝트를 진행하면서 그 개념을 사용하는 법을 익히는것은 코딩실력 성장에 있어서 분명 차이점이 있습니다.<br>
-                이제 어느정도 웹사이트를 만들고 관리 할 수 있으면 웹 외의 관심 있는 분야를 공부해보세요. 개발은 웹 외에도 앱개발, 게임개발, AI개발 등 여러 분야가 있습니다.<br>
-            <h3>코딩공부 인강사이트 추천</h3>
+            <h3>코딩공부 사이트 추천</h3>
               <ul>
                 <li><a class="a" href="https://www.opentutorials.org/" target="_blank" title="생활코딩 사이트">생활코딩</a></li>
                 <li><a class="a" href="https://www.inflearn.com/" target="_blank" title="인프런 사이트">인프런</a></li>
-                <li><a class="a" href="https://www.udemy.com/" target="_blank" title="유데미 사이트">유데미</a></li>
                 <li><a class="a" href="https://nomadcoders.co/" target="_blank" title="노마드코더 사이트">노마드 코더</a></li>
               </ul>
         </div>
