--- a/2.html
+++ b/2.html
@@ -26,36 +26,34 @@
         <h1><a class="a" href="index.html">비전공자의 코딩공부</a></h1>
       <div class="columns">
         <ul class="list">
-          <li><a class="a" href="1.html">study order</a></li>
-          <li><a id="page" class="a" href="2.html">1. Web Client</a></li>
-          <li><a class="a" href="3.html">2. Server</a></li>
+          <li><a class="a" href="1.html">소개</a></li>
+          <li><a id="page" class="a" href="2.html">1. Front-end</a></li>
+          <li><a class="a" href="3.html">2. Back-end</a></li>
           <li><a class="a" href="4.html">3. Project</a></li>
           <li><a class="a" href="5.html">etc.</a></li>
           <li><a class="a" href="6.html">Tip.</a></li>
         </ul>
         <div class="article">
-          <h2>Web Client</h2>
-            <h3 class="ph">클라이언트 공부 순서</h3>
+          <h2>Frontend</h2>
+ 고객이라는 뜻을 가진 클라이언트라는 말을 다들 들어보셨죠? 
+웹개발에서도 웹사이트를 이용하는 사용자들 즉고객들의 눈에 보이는 부분들을 클라이언트라고 말해요.
+이 클라이언트단을 만드는것이 바로 Frontend개발자의 역할입니다.<br>
+웹 프론트엔드를 하기 위해서는 크게 3가지언어를 배우는 것이 기본입니다.
+웹의 뼈대를 작성해주는 HTML, 웹을 예쁘게 꾸며주는 CSS, 사용자와 상호작용해서 웹을 동적으로 만들어주는 JavaScript라는
+ 3가지 언어는 유기적으로 연결되어 있습니다. 그래서 함께 연결해서 배우기 쉽습니다. 
+특히 HTML, CSS는 마크업랭기지라고 불리며 개발언어 취급도 못 받을 정도로 난이도가 쉽습니다. 
+JavaScript는 사실 배울 양이 많은 언어이지만,
+ 처음부터 끝까지 배우는 것이 아니라 웹개발에 꼭 필요한 부분만 배워서 웹의 요소선택과 제어를 할 수 있게 만들어 봅시다.<br>
+즉 HTML로 웹사이트에 필요한 것들을 만들어주고, CSS로 웹사이트를 예쁘게 꾸며주세요. 
+JS로 웹을 사용자가 동적으로 서비스를 이용 할 수 있게 만들어주세요.<br>
+          <br>
+		  <h3 class="ph">Frontend 공부 순서</h3>
               <ol>
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>JavaScript</li>
               </ol>
-            <h3>클라이언트 공부</h3>
-          고객이라는 뜻을 가진 클라이언트란 개발에서는 웹의 보이는 부분을 말합니다.
-          즉 웹사이트를 이용하는 사용자들의 눈에 보이는 모든 부분을 말합니다.<br>
-          HTML은 웹의 뼈대를 작성해주는 역할을 합니다. 밑그림을 그려주는 연필 같습니다.
-          HTML을 배워서 웹사이트의 필요한 것들을 만들어 주세요.<br>
-          CSS는 웹을 꾸며주는 역할을 합니다. 마치 그림에 색을 칠해주는 물감 같습니다.
-          CSS를 배워서 웹사이트를 예쁘게 만들어 주세요.<br>
-          JavaScript는 웹을 사용자와 상호작용하게 해주는 역할을 합니다.
-          마치 다 그려 놓은 그림들을 움직이게 만드는 플립북 같습니다.<br>
-          위의 3가지 언어는 유기적으로 연결되어 있고 배우기도 쉽습니다.
-          특히 HTML과 CSS는 마크업랭기지라고 불리며 개발언어 취급도 받지 못 할 정도로 난이도가 쉽습니다.
-          HTML과 CSS를 배워서 웹페이지의 화면을 그려봅시다. JavaScript는 사실 배울 양이 많은 언어입니다.
-          처음부터 끝까지 배우는 것이 아니라 웹의 요소 선택과 제어를 할 수 있는 정도로만 배워서 만들어 놓은 페이지에 적용해 봅시다.<br>
-          <br>
-          위의 3가지 언어는 생활코딩 인강을 추천합니다.<br><br>
+          <h3>Frontend 인강 추천 </h3>
           <iframe width="766" height="431" src="https://www.youtube.com/embed/tZooW6PritE?list=PLuHgQVnccGMDZP7FJ_ZsUrdCGH68ppvPb" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
