--- a/4.html
+++ b/4.html
@@ -26,9 +26,9 @@
         <h1><a class="a" href="index.html">비전공자의 코딩공부</a></h1>
       <div class="columns">
         <ul class="list">
-          <li><a class="a" href="1.html">study order</a></li>
-          <li><a class="a" href="2.html">1. Web Client</a></li>
-          <li><a class="a" href="3.html">2. Server</a></li>
+          <li><a class="a" href="1.html">소개</a></li>
+          <li><a class="a" href="2.html">1. Front-end</a></li>
+          <li><a class="a" href="3.html">2. Back-end</a></li>
           <li><a id="page" class="a" href="4.html">3. Project</a></li>
           <li><a class="a" href="5.html">etc.</a></li>
           <li><a class="a" href="6.html">Tip.</a></li>
@@ -36,12 +36,11 @@
         <div class="article">
           <h2>Project</h2>
             <p>
-              웹의 프론트엔드와 백엔드를 어느정도 이해했으면 프로젝트를 하면서 코딩실력을 성장시켜 봅시다.<br>
-              내가 만들고 싶은 웹서비스들을 생각해보고 기획해서 프로젝트 형식으로 하나하나 만들어 봅시다.
-              개인프로젝트를 진행 하는 것도 좋고 같은
-              서비스를 만들고 싶은 사람이나 같은 언어 공부하는 사람들을 구해서 팀프로젝트도 진행해봅시다.
-              개발자란 직업은 혼자 만들어 가는 것이 아니기 때문에 다른 사람들과의 의사소통능력도 중요합니다.
-              팀프로젝트를 진행하면서 협동과 협력이라는 자질을 배울 수 있습니다.
+   웹의 프론트엔드와 백엔드의 개념을 어느정도 이해했으면 프로젝트를 진행 하면서 코딩 실력을 성장시켜봅시다.<br>
+내가 평소에 만들어 보고 싶었던 웹서비스들을 생각해서 기획하고 프로젝트 형식으로 하나하나 만들어보세요. 
+개인프로젝트를 진행하면서 어느정도 개발 실력이 키워졌다면 다른 사람들과 팀을 이뤄서 팀프로젝트를 해보세요.
+개발자란 직업은 혼자 만들어서 완성 시키는것이 아니기 때문에 다른 사람들과 협업하는것이 중요합니다.
+다른 사람들과 함께 개발하면서 의사소통능력과 협력이라는 자질을 배워봅시다. 
             </p>
         </div>
       </div>
