--- a/5.html
+++ b/5.html
@@ -26,18 +26,21 @@
         <h1><a class="a" href="index.html">비전공자의 코딩공부</a></h1>
       <div class="columns">
         <ul class="list">
-          <li><a class="a" href="1.html">study order</a></li>
-          <li><a class="a" href="2.html">1. Web Client</a></li>
-          <li><a class="a" href="3.html">2. Server</a></li>
+          <li><a class="a" href="1.html">소개</a></li>
+          <li><a class="a" href="2.html">1. Front-end</a></li>
+          <li><a class="a" href="3.html">2. Back-end</a></li>
           <li><a class="a" href="4.html">3. Project</a></li>
           <li><a id="page" class="a" href="5.html">etc.</a></li>
           <li><a class="a" href="6.html">Tip.</a></li>
         </ul>
         <div class="article">
           <h2>etc.</h2>
-          <p> 웹개발에 어느정도 익숙해졌으면 화면과 서버의 개념이 어느정도 자리를 잡았을 것 입니다.
-            이제는 웹개발외에 앱개발이나 게임, 인공지능과 같은 관심있는 분야를 찾아서 공부해봅시다.
-            다른 개발도 화면과 서버라는 개념을 이해하고 공부한다면 조금 더 쉽게 배울 수 있습니다.<br>
+          <p> 웹개발에 어느정도 익숙해졌다면, 화면과 서버의 개념이 어느정도 잡힌 상태입니다.
+내가 만들고 싶은 웹개발에 좋은 모범사례를 찾아서 분석하고 공부합시다.
+좋은 코드를 많이 보고 분석하는것은 아주 좋은 공부입니다.
+그리고 데이터모델링, 구조까지, 배포하기 등 하기 싫은 공부들을 해서 개발을 더욱 편리하게 할 수 있도록합시다.<br>
+그 후엔 웹개발 외에 앱개발, 게임, 인공지능 같은 평소 관심 있는 분야를 찾아서 공부합시다.
+다른 개발도 화면과 서버라는 개념을 이해하고 공부한다면 조금 더 쉽게 배울 수 있습니다.<br>
           </p>
         </div>
       </div>
