--- a/6.html
+++ b/6.html
@@ -26,22 +26,21 @@
         <h1><a class="a" href="index.html">비전공자의 코딩공부</a></h1>
       <div class="columns">
         <ul class="list">
-          <li><a class="a" href="1.html">study order</a></li>
-          <li><a class="a" href="2.html">1. Web Client</a></li>
-          <li><a class="a" href="3.html">2. Server</a></li>
+          <li><a class="a" href="1.html">소개</a></li>
+          <li><a class="a" href="2.html">1. Front-end</a></li>
+          <li><a class="a" href="3.html">2. Back-end</a></li>
           <li><a class="a" href="4.html">3. Project</a></li>
           <li><a class="a" href="5.html">etc.</a></li>
           <li><a id="page" class="a" href="6.html">Tip.</a></li>
         </ul>
         <div class="article">
-          <h2>개발 실력 성장을 위한 Tip</h2>
+          <h2>개발 실력 성장을 위한 Tip 공유</h2>
           <p>
             개발 언어를 공부하고 사용하는 것 외에 개발 실력 성장에 도움을 준 나만의 팁들을 소개합니다.<br>
             <ol>
-              <li>영타 타이핑 연습 : 코드를 칠 때 빠르고 정확하게 쳐야한다.</li>
-              <li>매일 영어단어 외우기 : 질 좋은 문서와 자료들은 영어가 많다.</li>
-              <li>Adobe XD 사용법 익히기 : 기획 할 때 프로토타입을 할 수 있어서 좋다.</li>
-              <li></li>
+              <li>영어 타이핑 연습 : 코드를 칠 때 올바른 손가락으로 빠르고 정확하게 쳐야한다.</li>
+              <li>영어 공부 : 개발 공부하기 좋은 문서들과 자료들은 영어가 많다.</li>
+              <li>..</li>
             </ol>
           </p>
 
