--- a/3.html
+++ b/3.html
@@ -26,33 +26,35 @@
         <h1><a class="a" href="index.html">비전공자의 코딩공부</a></h1>
       <div class="columns">
         <ul class="list">
-          <li><a class="a" href="1.html">study order</a></li>
-          <li><a class="a" href="2.html">1. Web Client</a></li>
-          <li><a id="page" class="a" href="3.html">2. Server</a></li>
+          <li><a class="a" href="1.html">소개</a></li>
+          <li><a class="a" href="2.html">1. Front-end</a></li>
+          <li><a id="page" class="a" href="3.html">2. Back-end</a></li>
           <li><a class="a" href="4.html">3. Project</a></li>
           <li><a class="a" href="5.html">etc.</a></li>
           <li><a class="a" href="6.html">Tip.</a></li>
         </ul>
         <div class="article">
-          <h2>Server</h2>
-            <h3>서버 공부 순서</h3>
+          <h2>Backend</h2>
+프론트엔드의 개념을 학습하고, 웹의 클라이언트단을 만들었다면 서버를 관리하는 백엔드 공부를 시작합니다.
+고객들에게 서비스를 제공한다는 뜻을 가진 서버란 개발에서는 사용자 눈에 보이지 않는 정보를 말합니다.
+백엔드는 원래 공부 할 양이 방대하지만 요즘은 프레임워크의 도움을 받아서 비교적 쉽게 만들 수 있습니다.<br>
+독학을 한다면 Javascript, Ruby, Python 등 쉬운 언어 중 하나를 선택 하는 것도 좋은 방법입니다. 
+쉽다고 해도 프로그래밍언어를 처음 학습하는 사람이 처음부터 공부하는것은 시간이 오래 걸립니다.
+우선 기본개념인 변수, 조건문, 반복문, 함수라는 4가지 개념을 먼저 학습합니다. 
+공부하면서 개념을 이해 하는데 알고리즘 문제들을 풀어보면 더욱 빠르게 이해 할 수 있습니다.
+그 후 더 필요한 부분들은 찾아가면서 공부하면 됩니다.<br>
+프로그래밍언어의 개념 학습이 끝난 후에는 각 언어에 맞는 프레임워크의 사용법을 익혀봅시다.
+인프런, 노마드코더 같은 인강사이트에서 클론코딩을 수강하면서 익히면 조금 더 쉽고 재미있게 익힐 수 있습니다.<br>
+프레임워크를 학습하면서 내가 만들어 둔 클라이언트단에 백엔드의 동적인 서비스를 적용해서 동적인 웹을 만들어보세요.<br>
+            <h3>Backend 공부 순서</h3>
               <ol>
-                <li>Javascript, Ruby, Python 등 쉬운 백엔드 언어 중 선택</li>
-                <li>클론코딩으로 선택한 언어에 맞는 프레임워크 익히기 </li>
-                <li>Wed Client 학습하며 만들어 둔 웹에 적용하기 </li>
+                <li>웹 개발 백엔드 언어 선택(Java, Ruby, Python 등)</li>
+                <li>각 언어에 맞는 프레임위크 익히기(Spring, Rails, Django 등) </li>
+                <li>Frontend공부하면 만들어 놓은 웹클라이언트단에 적용하기</li>
               </ol>
-            <h3>서버 공부</h3>
-              프론트엔드의 개념 완성 후엔 서버를 관리하는 백엔드 공부를 시작합니다.
-              고객들에게 서비스를 제공 해준다는 뜻을 가진 서버란 개발에서는 사용자 눈에 보이지 않는 정보를 말합니다.<br>
-              백엔드는 원래 공부 할 양이 방대하지만 요즘은 프레임워크의 도움을 받아 비교적 쉽게 만들 수 있습니다.
-              Javascript, Ruby, Python 등 쉬운 언어 중 하나를 선택합니다.
-              쉽다고 해도 처음부터 공부하는 것은 시간이 오래 걸립니다.
-              우선 기본개념인 변수, 조건문, 반복문, 함수 4가지 개념을 먼저 학습합니다.
-              그 후 더 필요한 것은 그 부분만 찾아가면서 공부하면 됩니다.<br>
-              개념 학습이 끝 난 후에는 프레임워크의 사용법을 익혀봅시다.
-              인프런, 노마드코더 같은 학습 사이트에서 클론코딩을 수강하면서 익히면 됩니다.
-              각 언어의 프레임워크로는 Javascript spring, Python Django, Ruby Rails등이 있습니다.<br>
-              프레임워크를 학습하면서 Wed Client 학습하며 만들어 둔 웹에 적용해봅시다.<br>
+			<h3>Backend 개발 언어추천 </h3>
+Java : 학습하기 어렵지만 한국에 중요한 웹들이 대부분 JAVA로 개발되어 있어서 학습 할 곳이 많습니다.
+Python : 비교적 학습하기 쉬운 언어로 독학으로 공부하기 좋습니다.
         </div>
       </div>
   </body>
