--- a/index.html
+++ b/index.html
@@ -26,21 +26,20 @@
         <h1><a class="a" href="index.html">비전공자의 코딩공부</a></h1>
       <div class="columns">
         <ul class="list">
-          <li><a class="a" href="1.html">study order</a></li>
-          <li><a class="a" href="2.html">1. Web Client</a></li>
-          <li><a class="a" href="3.html">2. Server</a></li>
+          <li><a id="page" class="a" href="1.html">소개</a></li>
+          <li><a class="a" href="2.html">1. Front-end</a></li>
+          <li><a class="a" href="3.html">2. Back-end</a></li>
           <li><a class="a" href="4.html">3. Project</a></li>
           <li><a class="a" href="5.html">etc.</a></li>
           <li><a class="a" href="6.html">Tip.</a></li>
         </ul>
         <div class="article">
           <p>
-          안녕하세요.<br>
-          이 웹 사이트 비전공자인 제가 코딩에 입문하기 위해 어떤 순서로 공부했는지 공유하기 위해 만들어졌습니다.<br>
-          공부 순서외에도 저만의 코딩 실력 향상을 위한 팁을 공유하고 있습니다.<br>
-          제가 공유하는 것 외에도 여러분의 팁도 서로 공유하는 공간 만들고 싶어요!<br>
+          안녕하세요. 이 곳은 비전공자인 제가 개발공부를 어떻게 했는지 공유하는 곳입니다. 개발자로 입문하기 위해서 무엇을 공부했는지 어떤 순서로 공부했는지를 기록했습니다. 공부 순서외에도 코딩 실력 향상을 위한 팁을 공유하고 있습니다. 제가 공유하는 것 외에도 여러분들의 팁도 서로 공유하는 공간을 만들고 싶습니다.
           <br><br><br>
-          <img src="img\keyboard.jpg" width="50%" >
+          <img src="img\keyboard.jpg" width="60%" >
+		  <img src="img\python.jpg" width="60%" >
+		  <img src="img\project.jpg" width="60%" >
         </p>
         </div>
       </div>
